--- a/240513_cpp_practice1/240513_cpp_practice1.vcxproj.filters
+++ b/240513_cpp_practice1/240513_cpp_practice1.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Function.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Item.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Character.h">
