--- a/240513_cpp_practice1/240513_cpp_practice1.vcxproj
+++ b/240513_cpp_practice1/240513_cpp_practice1.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="240513_cpp_practice1.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Function.cpp" />
+    <ClCompile Include="Item.cpp" />
     <ClCompile Include="Monster.cpp" />
   </ItemGroup>
   <ItemGroup>
