--- a/240513_cpp_practice1/240513_cpp_practice1.vcxproj.filters
+++ b/240513_cpp_practice1/240513_cpp_practice1.vcxproj.filters
@@ -27,7 +27,7 @@
     <ClCompile Include="Function.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Item.cpp">
+    <ClCompile Include="ItemStash.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -41,7 +41,7 @@
     <ClInclude Include="Function.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Item.h">
+    <ClInclude Include="ItemStash.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
